# CS2-Skin-Forge

./: .gitignore  README.md  README_CN.md  README_RU.md  screenshots.md
.github/workflows/: build.yml
Panel/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Panel/src/: App.tsx
Panel/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
Panel/src-tauri/icons/: icon.icns
Panel/src-tauri/src/: lib.rs  main.rs
Panel/src/components/: AboutDialog.tsx  AgentPanel.tsx  DisclaimerDialog.tsx  GlovePanel.tsx  Header.tsx  KnifePanel.tsx  MusicKitPanel.tsx  PreviewPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  TabNavigation.tsx  WeaponPanel.tsx
Panel/src/data/: keychains.ts  knifeSkins.ts  knives.ts  localNames.ts  nameMap.json  skinNamesEn.ts  skins.ts  stickers.ts  weaponImages.ts  weapons.ts
Panel/src/i18n/: dictionary.ts  index.ts  keys.ts
Panel/src/lib/: api.ts
Panel/src/styles/: index.css
Panel/src/utils/: types.ts
addons/counterstrikesharp/plugins/PlayerSkinMod/: PlayerSkinMod.cs  PlayerSkinMod.csproj  PlayerSkinMod.json  PlayerSkinModPlugin.cs  skins_en.json
addons/counterstrikesharp/plugins/PlayerSkinMod/Data/: StaticData.cs
addons/counterstrikesharp/plugins/PlayerSkinMod/Models/: PlayerLoadout.cs
addons/counterstrikesharp/plugins/PlayerSkinMod/Services/: LoadoutService.cs  WeaponService.cs
scripts/: fetch_keychains.py  fetch_names.py
