[package]
name = "cs2-skin-mod-panel"
version = "1.2.1"
description = "CS2 Skin Local Mod - Visual skin customization panel"
authors = ["CS2-Skin-local-mod"]
edition = "2021"

[lib]
name = "cs2_skin_mod_panel_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
